# algoRuck

./: CMakeLists.txt  README.md  base_iteration.cpp  base_iteration.h  header.h  in_params.cpp  in_params.h  input_knap.txt  item.cpp  item.h  main.cpp  out_params.cpp  out_params.h  output_knap.txt  rucksack.h  rucksack_testing.cpp  source.cpp  source.h
